--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node --transpile-only ./src/index.ts",
+    "dev": "ts-node ./src/index.ts",
     "build": "tsc"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "@faker-js/faker": "^8.3.1",
     "@influxdata/influxdb-client": "^1.33.2",
     "cron": "^3.1.6",
+    "dotenv": "^16.3.1",
     "luxon": "^3.4.4",
     "random": "^4.1.0",
     "ts-node": "^10.9.2",
